<resources>
    <string name="app_name">VoilaPicoPro</string>
    <string name="temperature">\?°C</string>
    <string name="number_of_steps">0 Steps</string>
    <string name="question_title">Question Title</string>
    <string name="question">Question ?</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">N/A</string>
    <string name="ble_sync_required">Please synchronize with your smartphone to start</string>
</resources>
